[tool.poetry]
name = "amar-imitator-bot"
version = "0.1.0"
description = "telegram bot to automate some of my replies in group chat"
authors = ["Amar1729 <amar.paul16@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
python-telegram-bot = "^13.8.1"
pytz = "^2021.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
